--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -23,6 +23,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  english_words: ^3.1.0
+  bloc: ^0.14.0
+  flutter_bloc: ^0.14.0
+  dio: ^2.1.7
 
 dev_dependencies:
   flutter_test:
